Added better exception messages when using the ResultAggregator. Also bumped version to 3.10.1